<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Master Scrobbler</string>
    <string name="action_logoff">Logoff</string>
    <string name="action_settings">Settings</string>
    <string name="action_themes">Themes</string>
    <string name="action_about">About</string>
    <string name="album_image">Album Image</string>
    <string name="apps_to_scrobble">Scrobble Apps</string>
    <string name="authentication_failed">"Authentication failed, verify Last.fm username and password"</string>
    <string name="button_login">Login</string>
    <string name="choose_app_theme">Select app theme</string>
    <string name="connection_error">Error logging in, please check your connection.</string>
    <string name="error_password">enter password</string>
    <string name="error_username">enter username</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="last_fm_logo">Last.fm logo</string>
    <string name="last_fm_password">Password</string>
    <string name="last_fm_username">Last.fm username</string>
    <string name="master_scrobbler_notifications">Master Scrobbler Notifications</string>
    <string name="new_player_identified">New Player Identified</string>
    <string name="no_connection">No connection, please check the network.</string>
    <string name="no_player_identified">No Media Players Identified</string>
    <string name="no_player_identified_text">"No media player identified. Tap to set the app to scrobble or start listening to music in one of your apps."</string>
    <string name="notification_access">Notification Access</string>
    <string name="notification_scrobbling">Scrobbling</string>
    <string name="notification_scrobbling_offline">Scrobbling offline</string>
    <string name="notification_scrobbling_validating">Validating music</string>
    <string name="notification_scrobbling_validation_error">Could not validate the song, no scrobble will be performed.</string>
    <string name="option_exit">Quit</string>
    <string name="option_yes">Yes</string>
    <string name="period_12month">Last 365 days</string>
    <string name="period_1month">Last 30 days</string>
    <string name="period_3month">Last 90 days</string>
    <string name="period_6month">Last 180 days</string>
    <string name="period_7day">Last 7days</string>
    <string name="period_overall">All time</string>
    <string name="player_identified">Media player %1$s identified. Tap to configure the app to scrobble.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="question_notification_access">" For the application to work, you must grant access to notifications. Do you want to open the settings?"</string>
    <string name="recent_tracks">Recent Tracks</string>
    <string name="scrobbling_since">%1$s • scrobbling since %2$s</string>
    <string name="select_apps_scrobble">Select apps to Scrobble</string>
    <string name="service_offline">Last.fm service is temporarily offline, please try again later</string>
    <string name="service_running">Running Service</string>
    <string name="themes">Themes</string>
    <string name="too_much_requisitions">Your IP made many requests in a short time.</string>
    <string name="top_albums">Albums</string>
    <string name="top_artists">Artists</string>
    <string name="try_again">Temporary error processing login, please try again</string>
    <string name="error_love_unlove_action">Could not perform this action.</string>
    <string name="fab_update">Update</string>
    <string name="fab_set_wall">Set as wallpaper</string>
    <string name="fab_share_image">Share image</string>
    <string name="error_loading_data">Error loading data, please try again.</string>
    <string name="applied_wallpaper">"The wallpaper has been applied"</string>
    <string name="error_wallpaper">"Error applying wallpaper"</string>
    <string name="floating_action_button_description">Floating action button with actions</string>
    <string name="change_wallpaper_description">Action to change the wallpaper with the current image grid</string>
    <string name="action_update_description">Action to update the screen information</string>
    <string name="share_description">Action to share the current image grid</string>
    <string name="about_description"><![CDATA[A simple Scrobble app with music validations using the Last.fm API itself.<br><br>
    Icons from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> and licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a><br><br>
    Last.fm and notification icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a><br>
    Heart icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a><br>
    Application icon made by <a href="https://www.flaticon.com/authors/xnimrodx" title="xnimrodx">xnimrodx</a><br><br>
    For suggestions, questions or bugs, send me an <a href="mailto:kaneda.software@gmail.com?subject=Master%20Scrobbler" target="_top">email.</a><br><br>
    Check our <a href="https://master-scrobbler.flycricket.io/privacy.html" title="Privacy Policy">Privacy Policy</a><br><br><br><br>
    <b>Open source libraries used</b>
    ]]></string>
    <string name="warning_title">Warning</string>
    <string name="warning_message">Last.fm does not return artist images via its API. An image search method was used which may bring the incorrect image corresponding to the artist.</string>
    <string name="dont_show_this_message_again">Don\'t show this message again</string>
    <string name="open_links">Open Links</string>
    <string name="open_links_internally">Open links internally</string>
    <string name="share_image_text">"My top %1$s from the %2$s on Last.fm. Generated by Master Scrobbler. Check it out, for Android: http://bit.ly/2MV8YOF"</string>
    <string name="share_image_all_time_text">"My top %1$s from %2$s on Last.fm. Generated by Master Scrobbler. Check it out, for Android: http://bit.ly/2MV8YOF"</string>
</resources>